<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/myInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <ImageView
                android:id="@+id/myIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/user_icon_default_main"/>
            <TextView
                android:id="@+id/myNickName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/myIcon"
                android:text="@string/default_nickName"
                android:textSize="16dp"
                android:layout_marginLeft="16dp"
                android:layout_centerInParent="true"/>
            </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/edit_myInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_myInfo"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_str"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"/>

        <TextView
            android:id="@+id/upVotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upVotes"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/upLoads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upLoads"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        </LinearLayout>

</ScrollView>