<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/userIconLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/user_icon_default_main"/>
            <TextView
                android:id="@+id/changeIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/userIcon"
                android:text="@string/change_icon_str"
                android:textSize="16dp"
                android:layout_marginLeft="16dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="76dp"
            android:background="@android:color/darker_gray"
            />
        <RelativeLayout
            android:id="@+id/nickNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <TextView
                android:id="@+id/nickNameTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/default_nickName"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"/>
            <EditText
                android:id="@+id/nickNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/nickNameTextView"
                android:text="@string/edit_nickName"
                android:textSize="16dp"
                android:layout_marginLeft="4dp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sexLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <TextView
                android:id="@+id/sexTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/sex_str"
                android:textStyle="bold"
                android:gravity="center"/>
            <CheckBox
                android:id="@+id/sexSelectCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_sex_choice"
                android:checked="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="76dp"
            android:background="@android:color/darker_gray"
            />
        <RelativeLayout
            android:id="@+id/signatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <TextView
                android:id="@+id/signatureTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:text="@string/signature"
                android:gravity="center"/>
            <EditText
                android:id="@+id/signatureEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/signatureTextView"
                android:text="@string/default_signature"
                android:textSize="16dp"
                android:layout_marginLeft="4dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="76dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"/>

        <TextView
            android:id="@+id/emailResetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_email"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/changePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

</ScrollView>