<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <RelativeLayout
            android:id="@+id/settings_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down">
            <TextView
                android:id="@+id/settings_push_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:textSize="16dp"
                android:layout_centerVertical="true"
                android:paddingTop="8dip"
                android:paddingBottom="8dip"
                />
            <CheckBox
                android:id="@+id/settings_push_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_push_switch"
                android:checked="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/settings_cache_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/clear_picture_cache"
            android:gravity="center|left"
            android:layout_centerVertical="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/settings_update_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_version"
            android:textSize="16dp"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_str"
            android:textSize="16dp"
            android:gravity="center|left"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/selector_settings_item_down"/>

    </LinearLayout>
</ScrollView>
